[gd_scene load_steps=12 format=3 uid="uid://cpsjjqnbpjjn3"]

[ext_resource type="Script" uid="uid://c0yidho32rxo4" path="res://main.gd" id="1_jr38f"]
[ext_resource type="Texture2D" uid="uid://vxujfchcogsj" path="res://tiles-6.png" id="3_fovek"]
[ext_resource type="Texture2D" uid="uid://2vqqslgsb7ru" path="res://bg-1-1 (1).png" id="3_p3q1b"]
[ext_resource type="PackedScene" uid="uid://d17us81e3njfd" path="res://player.tscn" id="5_1edqb"]
[ext_resource type="PackedScene" uid="uid://df2jmwl7i3lvl" path="res://enemy.tscn" id="6_tgred"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ncl43"]
texture = ExtResource("3_fovek")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
18:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
18:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0

[sub_resource type="TileSet" id="TileSet_l7jri"]
tile_layout = 5
tile_offset_axis = 1
physics_layer_0/collision_layer = 19
physics_layer_0/collision_mask = 19
sources/0 = SubResource("TileSetAtlasSource_ncl43")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4dik"]
size = Vector2(16, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w1q40"]
radius = 1.0132
height = 29.9442

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ekfd"]
size = Vector2(20, 208)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i0bpe"]
size = Vector2(3378, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_jr38f")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_top = 96.0
offset_right = 3376.0
offset_bottom = 342.0
texture = ExtResource("3_p3q1b")

[node name="tilemap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_l7jri")
format = 2
layer_0/tile_data = PackedInt32Array(1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310728, 0, 0, 1310727, 0, 0, 1310726, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 1310747, 0, 0, 1310746, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1245214, 0, 0, 1245213, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1310758, 0, 0, 1310757, 0, 0, 1310756, 0, 0, 1310755, 0, 0, 1310754, 0, 0, 1310753, 0, 0, 1310752, 0, 0, 1310751, 0, 0, 1245223, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1310767, 0, 0, 1310766, 0, 0, 1310765, 0, 0, 1310764, 0, 0, 1310763, 0, 0, 1310762, 0, 0, 1310761, 0, 0, 1310768, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1310779, 0, 0, 1310778, 0, 0, 1310777, 0, 0, 1310776, 0, 0, 1310775, 0, 0, 1310774, 0, 0, 1310771, 0, 0, 1310770, 0, 0, 1310769, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1245248, 0, 0, 1245249, 0, 0, 1245250, 0, 0, 1245251, 0, 0, 1310787, 0, 0, 1310786, 0, 0, 1310785, 0, 0, 1310784, 0, 0, 1310783, 0, 0, 1310782, 0, 0, 1310781, 0, 0, 1310780, 0, 0, 1245256, 0, 0, 1310792, 0, 0, 1310793, 0, 0, 1310794, 0, 0, 1245258, 0, 0, 1245257, 0, 0, 1245259, 0, 0, 1245260, 0, 0, 1245261, 0, 0, 1310796, 0, 0, 1310795, 0, 0, 1310797, 0, 0, 1245262, 0, 0, 1245263, 0, 0, 1245264, 0, 0, 1310800, 0, 0, 1310799, 0, 0, 1310798, 0, 0, 1245265, 0, 0, 1245266, 0, 0, 1245267, 0, 0, 1245268, 0, 0, 1245269, 0, 0, 1310805, 0, 0, 1310804, 0, 0, 1310803, 0, 0, 1310802, 0, 0, 1310801, 0, 0, 1245274, 0, 0, 1310810, 0, 0, 1245275, 0, 0, 1245276, 0, 0, 1245277, 0, 0, 1245278, 0, 0, 1245279, 0, 0, 1310815, 0, 0, 1310814, 0, 0, 1310813, 0, 0, 1310812, 0, 0, 1310811, 0, 0, 1245280, 0, 0, 1245281, 0, 0, 1245282, 0, 0, 1245283, 0, 0, 1245284, 0, 0, 1310820, 0, 0, 1310819, 0, 0, 1310818, 0, 0, 1310817, 0, 0, 1310816, 0, 0, 1245285, 0, 0, 1245286, 0, 0, 1310822, 0, 0, 1310821, 0, 0, 1245287, 0, 0, 1245288, 0, 0, 1245289, 0, 0, 1245290, 0, 0, 1310825, 0, 0, 1310824, 0, 0, 1310823, 0, 0, 1310826, 0, 0, 1245291, 0, 0, 1245292, 0, 0, 1245293, 0, 0, 1245294, 0, 0, 1245295, 0, 0, 1245296, 0, 0, 1245297, 0, 0, 1310833, 0, 0, 1310832, 0, 0, 1310831, 0, 0, 1310830, 0, 0, 1310829, 0, 0, 1310828, 0, 0, 1310827, 0, 0, 1245298, 0, 0, 1245299, 0, 0, 1245300, 0, 0, 1245301, 0, 0, 1245302, 0, 0, 1310834, 0, 0, 1310835, 0, 0, 1310836, 0, 0, 1310837, 0, 0, 1310838, 0, 0, 1245303, 0, 0, 1310839, 0, 0, 1245304, 0, 0, 1245305, 0, 0, 1245306, 0, 0, 1245307, 0, 0, 1245308, 0, 0, 1245309, 0, 0, 1245310, 0, 0, 1245311, 0, 0, 1245312, 0, 0, 1245313, 0, 0, 1245314, 0, 0, 1245315, 0, 0, 1245316, 0, 0, 1310852, 0, 0, 1310851, 0, 0, 1310850, 0, 0, 1310849, 0, 0, 1310848, 0, 0, 1310847, 0, 0, 1310846, 0, 0, 1310845, 0, 0, 1310844, 0, 0, 1310843, 0, 0, 1310842, 0, 0, 1310841, 0, 0, 1310840, 0, 0, 1245317, 0, 0, 1245318, 0, 0, 1245319, 0, 0, 1310853, 0, 0, 1310854, 0, 0, 1310855, 0, 0, 1310856, 0, 0, 1245320, 0, 0, 1245321, 0, 0, 1245322, 0, 0, 1310858, 0, 0, 1310857, 0, 0, 1310859, 0, 0, 1245323, 0, 0, 1245324, 0, 0, 1310860, 0, 0, 1245325, 0, 0, 1245326, 0, 0, 1245327, 0, 0, 1245328, 0, 0, 1310864, 0, 0, 1310863, 0, 0, 1310862, 0, 0, 1310861, 0, 0, 1245329, 0, 0, 1245330, 0, 0, 1245331, 0, 0, 1310867, 0, 0, 1310866, 0, 0, 1310865, 0, 0, 1245345, 0, 0, 1245346, 0, 0, 1245347, 0, 0, 1310883, 0, 0, 1310882, 0, 0, 1310881, 0, 0, 1245348, 0, 0, 1310884, 0, 0, 1310885, 0, 0, 1245349, 0, 0, 1245350, 0, 0, 1245351, 0, 0, 1245352, 0, 0, 1245353, 0, 0, 1310889, 0, 0, 1310888, 0, 0, 1310887, 0, 0, 1310886, 0, 0, 1245355, 0, 0, 1245354, 0, 0, 1310891, 0, 0, 1310892, 0, 0, 1245356, 0, 0, 1310890, 0, 0, 1245357, 0, 0, 1245358, 0, 0, 1245359, 0, 0, 1245360, 0, 0, 1245361, 0, 0, 1245362, 0, 0, 1245363, 0, 0, 1245364, 0, 0, 1245365, 0, 0, 1310898, 0, 0, 1310897, 0, 0, 1310896, 0, 0, 1310895, 0, 0, 1310894, 0, 0, 1310893, 0, 0, 1310899, 0, 0, 1310900, 0, 0, 1310901, 0, 0, 1114292, 65536, 8, 1179828, 65536, 9, 1245366, 0, 0, 1310902, 0, 0, 1310903, 0, 0, 1310904, 0, 0, 1310905, 0, 0, 1310906, 0, 0, 1310907, 0, 0, 1310908, 0, 0, 1310909, 0, 0, 1245373, 0, 0, 1245374, 0, 0, 1310910, 0, 0, 1245372, 0, 0, 1245371, 0, 0, 1245370, 0, 0, 1245369, 0, 0, 1245368, 0, 0, 1245367, 0, 0, 1245375, 0, 0, 1310911, 0, 0, 1245376, 0, 0, 1245377, 0, 0, 1245378, 0, 0, 1245379, 0, 0, 1245380, 0, 0, 1245381, 0, 0, 1245382, 0, 0, 1245383, 0, 0, 1310919, 0, 0, 1310918, 0, 0, 1310917, 0, 0, 1310916, 0, 0, 1310915, 0, 0, 1310914, 0, 0, 1310913, 0, 0, 1310912, 0, 0, 1245384, 0, 0, 1310920, 0, 0, 1245385, 0, 0, 1245386, 0, 0, 1245387, 0, 0, 1310923, 0, 0, 1310922, 0, 0, 1310921, 0, 0, 1245388, 0, 0, 1245389, 0, 0, 1245390, 0, 0, 1245391, 0, 0, 1245392, 0, 0, 1245393, 0, 0, 1310929, 0, 0, 1310928, 0, 0, 1310927, 0, 0, 1310926, 0, 0, 1310925, 0, 0, 1310924, 0, 0, 1245394, 0, 0, 1310930, 0, 0, 1114140, 0, 8, 1179676, 0, 9, 1114141, 65536, 8, 1179677, 65536, 9, 1048614, 0, 8, 1114150, 0, 9, 1048615, 65536, 8, 1114151, 65536, 9, 983086, 0, 8, 1048622, 0, 9, 983087, 65536, 8, 1048623, 65536, 9, 983097, 0, 8, 1048633, 0, 9, 983098, 65536, 8, 1048634, 65536, 9, 1179705, 0, 9, 1179706, 65536, 9, 1114169, 0, 9, 1114170, 65536, 9, 1179694, 0, 9, 1179695, 65536, 9, 1114158, 0, 9, 1114159, 65536, 9, 1179686, 0, 9, 1179687, 65536, 9, 983060, 65536, 0, 983062, 65536, 0, 983064, 65536, 0, 983061, 983040, 0, 983063, 983040, 0, 720918, 983040, 0, 983056, 983040, 0, 1114275, 0, 8, 1179811, 0, 9, 1114276, 65536, 8, 1179812, 65536, 9, 1114291, 0, 8, 1179827, 0, 9, 983208, 65536, 0, 983209, 65536, 0, 983211, 65536, 0, 983210, 983040, 0, 983158, 65536, 0, 983169, 65536, 0, 983170, 65536, 0, 721024, 65536, 0, 721027, 65536, 0, 721025, 983040, 0, 721026, 983040, 0, 721017, 65536, 0, 721018, 65536, 0, 721019, 65536, 0, 983146, 983040, 0, 983149, 983040, 0, 983152, 983040, 0, 721005, 983040, 0, 983140, 65536, 0, 983141, 65536, 0, 983134, 65536, 0, 720987, 65536, 0, 720988, 65536, 0, 720989, 65536, 0, 720990, 983040, 0, 720976, 65536, 0, 720977, 65536, 0, 720978, 65536, 0, 720979, 65536, 0, 720980, 65536, 0, 720981, 65536, 0, 720982, 65536, 0, 720983, 65536, 0, 983118, 983040, 0, 983117, 65536, 0, 983119, 65536, 0, 1245255, 0, 0, 1310791, 0, 0, 1245252, 0, 0, 1310788, 0, 0, 1245273, 0, 0, 1310809, 0, 0, 1179782, 0, 1, 1179783, 0, 1, 1179784, 0, 1, 1179785, 0, 1, 1114247, 0, 1, 1114248, 0, 1, 1114249, 0, 1, 1048712, 0, 1, 1048713, 0, 1, 983177, 0, 1, 983180, 0, 1, 1048716, 0, 1, 1114252, 0, 1, 1179788, 0, 1, 1179789, 0, 1, 1179790, 0, 1, 1179791, 0, 1, 1114253, 0, 1, 1114254, 0, 1, 1048717, 0, 1, 1179829, 0, 1, 1179830, 0, 1, 1179831, 0, 1, 1179832, 0, 1, 1179833, 0, 1, 1179834, 0, 1, 1179835, 0, 1, 1179836, 0, 1, 1179837, 0, 1, 721084, 0, 1, 786620, 0, 1, 852156, 0, 1, 917692, 0, 1, 983228, 0, 1, 1048764, 0, 1, 1114300, 0, 1, 721085, 0, 1, 786621, 0, 1, 852157, 0, 1, 917693, 0, 1, 983229, 0, 1, 1048765, 0, 1, 1114301, 0, 1, 1114294, 0, 1, 1114295, 0, 1, 1114296, 0, 1, 1114297, 0, 1, 1114298, 0, 1, 1114299, 0, 1, 1048759, 0, 1, 1048760, 0, 1, 1048761, 0, 1, 1048762, 0, 1, 1048763, 0, 1, 983224, 0, 1, 983225, 0, 1, 983226, 0, 1, 983227, 0, 1, 917689, 0, 1, 917690, 0, 1, 917691, 0, 1, 852154, 0, 1, 852155, 0, 1, 786619, 0, 1, 1245332, 0, 0, 1310868, 0, 0, 1245333, 0, 0, 1310869, 0, 0, 1245334, 0, 0, 1310870, 0, 0, 1245335, 0, 0, 1310871, 0, 0, 1245336, 0, 0, 1310872, 0, 0, 1245339, 0, 0, 1310875, 0, 0, 1245340, 0, 0, 1310876, 0, 0, 1245341, 0, 0, 1310877, 0, 0, 1245342, 0, 0, 1310878, 0, 0, 1245343, 0, 0, 1310879, 0, 0, 1245344, 0, 0, 1310880, 0, 0, 1179796, 0, 1, 1179797, 0, 1, 1179798, 0, 1, 1179799, 0, 1, 1179800, 0, 1, 1114261, 0, 1, 1114262, 0, 1, 1114263, 0, 1, 1114264, 0, 1, 1048726, 0, 1, 1048727, 0, 1, 1048728, 0, 1, 983191, 0, 1, 983192, 0, 1, 983195, 0, 1, 1048731, 0, 1, 1114267, 0, 1, 1179803, 0, 1, 1179804, 0, 1, 1179805, 0, 1, 1179806, 0, 1, 1048732, 0, 1, 1114268, 0, 1, 1114269, 0, 1, 1179846, 0, 1)

[node name="Player" parent="." instance=ExtResource("5_1edqb")]
position = Vector2(20, 1)

[node name="enemies" type="Node" parent="."]

[node name="goomba1" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(344, 288)
collision_priority = 2.0
platform_floor_layers = 4294901762
platform_wall_layers = 2

[node name="goomba2" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(664, 288)

[node name="goomba3" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(792, 288)

[node name="goomba4" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(856, 288)

[node name="goomba5" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(1296, 168)

[node name="goomba6" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(1328, 168)

[node name="goomba7" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(1488, 296)

[node name="goomba8" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(1528, 296)

[node name="goomba9" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(1984, 296)

[node name="goomba10" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(2008, 296)

[node name="goomba11" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(2032, 296)

[node name="goomba12" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(2056, 296)

[node name="goomba13" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(2784, 296)

[node name="goomba14" parent="enemies" instance=ExtResource("6_tgred")]
position = Vector2(2816, 296)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 3245.0
offset_top = 195.0
offset_right = 3310.0
offset_bottom = 221.0
text = "you win!"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3272, 272)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_b4dik")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(752, 253)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(176, -15)
rotation = -1.58409
shape = SubResource("CapsuleShape2D_w1q40")

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(3376, 200)
shape = SubResource("RectangleShape2D_7ekfd")

[node name="fallzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="fallzone"]
position = Vector2(1687, 360)
shape = SubResource("RectangleShape2D_i0bpe")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_entered" from="fallzone" to="." method="_on_fallzone_body_entered"]
